@@ -1,6 +1,6 @@
 /* This testcase is part of GDB, the GNU debugger.
 
-   Copyright 2001, 2004, 2007-2012 Free Software Foundation, Inc.
+   Copyright 2001, 2004, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 
    Contributed by Red Hat, originally written by Jim Blandy.
 
@@ -72,11 +72,6 @@ char32_t *String32;
 typedef wchar_t my_wchar_t;
 my_wchar_t myvar;
 
-/* Some arrays for simple assignment tests.  */
-short short_array[3];
-int int_array[3];
-long long_array[3];
-
 void
 init_string (char string[],
              char x,
@@ -123,6 +118,10 @@ extern void malloc_stub (void);
 
 int main ()
 {
+#ifdef usestubs
+  set_debug_traps();
+  breakpoint();
+#endif
 
   malloc_stub ();
 
