@@ -1,6 +1,6 @@
 # This testcase is part of GDB, the GNU debugger.
 
-# Copyright 2001, 2004, 2007-2012 Free Software Foundation, Inc.
+# Copyright 2001, 2004, 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,6 +19,10 @@
 # bug-gdb@gnu.org
 
 # Test GDB's character set support.
+
+if $tracelevel then {
+	strace $tracelevel
+}
 
 
 set testfile "charset"
@@ -541,12 +545,6 @@ if {$wchar_ok} {
 }
 
 set ucs2_ok [expr {[get_sizeof char16_t 99] == 2}]
-
-if ![valid_host_charset "UTF-16"] {
-    verbose -log "Disabling UTF-16 tests."
-    set ucs2_ok 0
-}
-
 if {$ucs2_ok} {
     test_wide_or_unicode u UTF-16
 }
@@ -607,25 +605,14 @@ proc string_display { var_name set_prefix x_size x_type} {
   gdb_test "x /2${x_size}s ${var_name}" ".* ${x_type}\"Test String\"\[\r\n\]+.* ${x_type}\"with zeroes\"" "Display String ${var_name} with x/${x_size}s"
 }
 
-if {$ucs2_ok} {
-    string_display String16 u h u
-    if {$wchar_size == 2} {
-	string_display String16 L h u
-    }
+string_display String16 u h u
+if {$wchar_size == 2} {
+  string_display String16 L h u
 }
-
+ 
 string_display String32 U w U
 if {$wchar_size == 4} {
   string_display String32 L w U
-}
-
-
-foreach name {short int long} {
-    # We're really just checking to make sure this doesn't give an
-    # error.
-    gdb_test "print ${name}_array = \"hi\"" \
-	" = {.*}" \
-	"assign string to $name array"
 }
 
 
